fix menu not aligned bug

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -118,6 +118,7 @@ h1 {
     left: 0;
     background-color: black;
     padding: 4rem 5rem;
+    align-items: center;
 }
 
 .navBar {
@@ -127,12 +128,8 @@ h1 {
     margin-right: 10rem;
 }
 
-.navMenu {
-    margin-right: 10em;
-}
-
 .button {
-    background: rgba(15, 12, 12, 0.1);
+    background: rgba(255, 255, 255, 0.1);
     border-radius: 1rem;
     width: max-content;
 }
@@ -227,18 +224,18 @@ textarea {
     display: flex;
     flex-direction: column;
     position: relative;
-    top: 25px;
-    left: 25px;
+    left: 2.5rem;
     z-index: 1;
     -webkit-user-select: none;
     user-select: none;
+    margin-right: 10rem;
   }
   
   .navMenu input
   {
     display: flex;
-    width: 40px;
-    height: 32px;
+    width: 4.0rem;
+    height: 3.2rem;
     position: absolute;
     cursor: pointer;
     opacity: 0;
@@ -248,14 +245,14 @@ textarea {
   .navMenu span
   {
     display: flex;
-    width: 29px;
-    height: 2px;
-    margin-bottom: 5px;
+    width: 2.9rem;
+    height: 0.2rem;
+    margin-bottom: 0.5rem;
     position: relative;
     background: #ffffff;
-    border-radius: 3px;
+    border-radius: 0.3rem;
     z-index: 1;
-    transform-origin: 5px 0px;
+    transform-origin: 0.5rem 0rem;
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 opacity 0.55s ease;
@@ -274,7 +271,7 @@ textarea {
   .navMenu input:checked ~ span
   {
     opacity: 1;
-    transform: rotate(45deg) translate(-3px, -1px);
+    transform: rotate(45deg) translate(-0.3rem, -0.1rem);
     background: #36383F;
   }
   .navMenu input:checked ~ span:nth-last-child(3)
@@ -285,7 +282,7 @@ textarea {
   
   .navMenu input:checked ~ span:nth-last-child(2)
   {
-    transform: rotate(-45deg) translate(0, -1px);
+    transform: rotate(-45deg) translate(0, -0.1rem);
   }
   
   .navMenuItems
@@ -306,7 +303,7 @@ textarea {
   
   .navMenuItems li
   {
-    padding: 10px 0;
+    padding: 1rem 0;
     transition-delay: 2s;
   }
   
